# AI-Powered-Customer-Support-Agent-with-Memory-and-Tool-Calling

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  experiment.ipynb  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/: dependencies.py
customer_support_agent/api/routers/: drafts.py
customer_support_agent/core/: __init__.py  settings.py
customer_support_agent/integrations/memory/: __init__.py  mem0_store.py
customer_support_agent/integrations/rag/: chroma_kb.py
customer_support_agent/integrations/tools/: support_tools.py
customer_support_agent/repositories/sqlite/: __init__.py  base.py  customer.py  tickets.py
customer_support_agent/schemas/: _init_.py  api.py
customer_support_agent/services/: copilot_service.py
